[package]
name = "monitrous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]} 
image = "0.24.5"
xml-rs = "0.8.4"
anyhow = "1.0.66"
indicatif = "0.17.2"
